# dockq-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
bench/: RESULTS.md  batch_ref.py  batch_rust.py  single.py
dockq-cli/: Cargo.toml
dockq-cli/src/: main.rs
dockq-core/: Cargo.toml
dockq-core/src/: align.rs  batch.rs  dockq.rs  error.rs  geometry.rs  lib.rs  mapping.rs  model.rs  parser.rs
dockq-core/tests/: integration.rs
dockq-py/: Cargo.toml  README.md  pyproject.toml
dockq-py/python/DockQ/: DockQ.py  __init__.py
dockq-py/python/dockq_rs/: __init__.py
dockq-py/src/: lib.rs
oracle/: README.md  dump_interfaces.py  dump_parse.py  oracle_run.py
oracle/dumps/interfaces/: 1A2K.json  1A2K_noalign.json  1EXB.json  1EXB_cif.json  6qwn_capri.json  dimer_dimer.json  model_native.json
oracle/dumps/parse/: 1EXB.cif.gz.json  1HHO_hem.cif.json  2HHB_hem.cif.json  6qwn-assembly1.cif.gz.json  6qwn-assembly2.cif.gz.json  dimer_dimer.model.pdb.json  native.pdb.json
oracle/dumps/parse_het/: 1A2K_r_l_b.model.pdb.json  1A2K_r_l_b.pdb.json  1EXB.cif.gz.json  1HHO_hem.cif.json  2HHB_hem.cif.json  6qwn-assembly1.cif.gz.json  6qwn-assembly2.cif.gz.json  dimer_dimer.pdb.json  model.pdb.json
tests/: differential.py  dropin_compat.py  golden.sh
