[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "dockq-rs"
version = "0.1.0"
description = "Rust reimplementation of DockQ scoring internals (protein/NA core) with a Python wrapper"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "dockq_rs"
# Ship the pure-Python `DockQ` drop-in compat package alongside the extension.
python-source = "python"
